package org.technbolts.protobuf;

option java_package = "org.technbolts.protobuf";
option java_outer_classname = "UserPBO";

option optimize_for = SPEED;

message User {
  required uint32 id = 1;
  optional string name = 2;
  repeated string email = 3;
}